structuring html main section

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -37,6 +37,7 @@ body {
         letter-spacing: 0.1rem;
         color: var(--color-white);
 
+        display: inline-block;
         background-color: var(--color-very-dark-blue);
         padding: 0.35rem 1.05rem;
         border-radius: 2.5rem;
