fix issues with spacing for button and in typography

--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -6,6 +6,7 @@
         font-size: 1.4rem;
         line-height: normal;
         letter-spacing: 0.093rem;
+        text-transform: uppercase;
         text-decoration: none;
         color: var(--color-white);
 
