--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,4 @@
 @import 'base/base';
 @import 'base/typography';
 @import 'components/button';
-@import 'layout/section-intro';
+@import 'layout/container';
