add style for main section

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -40,6 +40,6 @@ body {
     // center content on page
     display: grid;
     justify-content: center;
-    align-content: center;
+    // align-content: center;
     min-height: 100vh;
 }
