--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -2,5 +2,5 @@
     max-width: 37.5rem;
     overflow-x: hidden;
     padding: 3.8rem 3.2rem 9.2rem;
-    background-color: aquamarine;
+    // background-color: aquamarine;
 }
