add header, navigation menu and funcionality to toggle the menu

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -6,6 +6,7 @@
     --color-grayish-blue: hsl(231, 7%, 65%);
     --color-light-grayish-blue: hsl(204, 32%, 95%);
     --color-white: hsl(0, 0%, 100%);
+    --color-shadow: hsla(0, 0%, 0%, 0.15);
 
     // Typography
     // Body
