--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,7 @@
 @import 'base/base';
 @import 'base/typography';
+@import 'utils/utils';
 @import 'components/button';
 @import 'layout/container';
+@import 'layout/header';
 @import 'layout/section-intro';
