Respond to desktop size - button component

--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -21,4 +21,13 @@
     &:active {
         opacity: 0.5;
     }
+
+    @include media-screen-min($bp-desktop) {
+        &:link,
+        &:visited {
+            font-size: 1.6rem;
+            letter-spacing: 0.11rem;
+            padding: 1.45rem 3.2rem;
+        }
+    }
 }
